<resources>
    <string name="app_name">Nganim</string>
    <string name="home_nav">List</string>
    <string name="fav_nav">Favorite</string>
    <string name="search">Search</string>
    <string name="title_favorite">Favorite</string>
    <string name="title_fav">Favorite</string>
    <string name="anime_title">Title</string>
    <string name="anime_alternative_title">Other</string>
    <string name="anime_type">Type</string>
    <string name="anime_description">Description</string>
    <string name="anime_genre">Genre</string>
    <string name="anime_total_episodes">Total episodes</string>
</resources>